@@ -1,6 +1,10 @@
 New in v1.1.15 (????/??/??)
 ---------------------------
 
+Don't assume that a file cannot be read simply becasue of the access
+permissions -- eg, NFS with (rw,all_squash) options. Closes Savannah
+bug #21202. (Based on patch from Marc Horowitz)
+
 restore_set_root should check if it can read a particular directory
 before checking if "rdiff-backup-data" is contained in it. Closes
 Savannah bug #21106. (Patch from Alex Chapman)
